2007-10-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb: Use install_dir so custom gem
	repos can be used.

2007-10-08  Ryan Davis  <ryan@wrath.local>

	* lib/rubygems.rb: Fixed require order so custom_require is
	last. Added HACK tag to remind Jim to release rake.
	* test/test_gem_source_index.rb: Fixed latest_specs' tests so
	failures were much more readable.
	* lib/rubygems/source_index.rb: Fixed latest_specs to deal with
	platforms appropriately. Returns array again.

2007-10-08  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/config_file.rb: Boost bulk_threshold to 1000, Marshal
	format is smaller than yaml format quick index.
	* lib/rubygems/installer.rb: Make #shebang correctly rewrite env
	shebangs.
	* lib/rubygems/specification.rb: Mark Time.today for removal, too much
	depends upon it now.

2007-10-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb: Sped up ::_load.
	* lib/rubygems/source_index.rb: Sped up #search.
	* lib/rubygems/version.rb: Replace #to_ints with #ints, and cache
	result.
	* lib/rubygems/source_info_cache.rb: Only flush cache when it changes.

2007-10-05  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/user_interaction.rb: Allow customization of completion
	message for progress reporters.
	* lib/rubygems/command.rb: Add --quiet option.
	* lib/rubygems/commands/generate_index_command.rb: Add description.

2007-10-04  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/uninstaller.rb: Also check and uninstall old platform
	name to ensure legacy platform gems are uninstalled.
	* lib/rubygems/doc_manager.rb: Remove existing rdoc and ri directory
	so regenerating docs succeeds even if previously interrupted.

2007-10-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb: Make #outdated search only for gems
	matching the current platform.
	* lib/rubygems/commands/dependency_command.rb: Add --platform.
	* lib/rubygems/commands/outdated_command.rb: Ditto.